/*
 * Copyright 2024 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_package = "com.google.android.ground.proto";
option java_multiple_files = true;

// Describes a single data collection survey. Top level entity in the app.
message Survey {
    // Required. The system-defined unique identifier of this entity.
    string id = 1;
    // User-facing name of the survey.
    string name = 2;
    // User-facing description of the survey.
    string description = 3;
    // Defines who has access to do what with this survey.
    map<string, Role> acl = 4;
}

// Defines a user's role in a survey.
enum Role {
    // Default value when role is missing.
    UNSPECIFIED_ROLE = 0;
    // User may access survey in read-only model.
    VIEWER = 1;
    // User may also submit data, but not modify jobs or other survey metadata.
    DATA_COLLECTOR = 2;
    // User may also manage the survey, update locations of interest, etc.
    SURVEY_ORGANIZER = 3;
}